- cparm : Fixed naming convention for raid hfs devices in gui
- Added support for using UUIDs with ext2 filesystems (credits to bitz): http://forge.voodooprojects.org/p/chameleon/issues/208/
- Added Guerrero's patch on gui.c: http://forge.voodooprojects.org/p/chameleon/issues/178/
- cparm : Ported the OS detection to the trunk, updated the default theme to v 1.1 (credit to blackosx) 
- Added scorpius's patch (to get an unstretched boot screen for nVidia cards on DVI) in boot0.s,
  disabled by default: http://forum.voodooprojects.org/index.php/topic,2158.0.html
- Added exFAT volume label support (FAT64) support (credit to dmazar):
  http://forum.voodooprojects.org/index.php/topic,2095.0.html
- disableIRQs() http://www.insanelymac.com/forum/index.php?s=&showtopic=255866&view=findpost&p=1677779
  Port of original patch by: CPARM (who basically did this in boot.c) Thanks!
  The ACPI specification dictates that the 8259 (PC-AT compatible) vectors
  must be disabled (that is, masked) when enabling the ACPI APIC operation
  but this isn't done (apparently) on all mobo's and thus we do that here.
- Added AtiPorts option to GraphicsEnabler, so users can override the default number of ports. It proved
  to be useful when used to limit the number of ports that a framebuffer registers, which seems to be a
  requirement on laptops that can only use 2 ports at the same time.
  Thanks to Akbar for testing and AniV also for the tip:
    http://forum.voodooprojects.org/index.php/topic,1959.msg10402.html#msg10402
- Added NVidia ION AHCI controllers dev id to AHCIPortInjector kext.
  Forgot to mention source on the commit: http://forum.voodooprojects.org/index.php/topic,1170.0.html
- Renamed com.apple.Boot.plist to org.chameleon.Boot.plist.
- Added "ShowInfo" key (enabled by default for now), which enables/disables the display of
  partition and resolution related info, on the Gui.
  This info may not play well with some custom themes.