@@ -177,16 +177,20 @@ extern void setVideoMode(int mode, int drawgraphics);
 extern int  getVideoMode();
 extern void spinActivityIndicator();
 extern void clearActivityIndicator();
-extern void drawColorRectangle( unsigned short x,
-                                unsigned short y,
-                                unsigned short width,
-                                unsigned short height,
-                                unsigned char  colorIndex );
-extern void drawDataRectangle( unsigned short  x,
-                               unsigned short  y,
-                               unsigned short  width,
-                               unsigned short  height,
-                               unsigned char * data );
+extern void drawColorRectangle(
+                               unsigned short x,
+                               unsigned short y,
+                               unsigned short width,
+                               unsigned short height,
+                               unsigned char  colorIndex
+                               );
+extern void drawDataRectangle(
+                              unsigned short  x,
+                              unsigned short  y,
+                              unsigned short  width,
+                              unsigned short  height,
+                              unsigned char * data
+                              );
 extern int
 convertImage( unsigned short width,
               unsigned short height,
