@@ -43,8 +43,8 @@ enum {
     iDeviceGeneric_o,
     iDeviceHFS,
     iDeviceHFS_o,
-    iDeviceHFS_ML,
-    iDeviceHFS_ML_o,
+    iDeviceHFS_Mountain,
+    iDeviceHFS_Mountain_o,
     iDeviceHFS_Lion,
     iDeviceHFS_Lion_o,
     iDeviceHFS_SL,
@@ -55,8 +55,8 @@ enum {
     iDeviceHFS_Tiger_o,
     iDeviceHFSRAID,
     iDeviceHFSRAID_o,
-    iDeviceHFSRAID_ML,
-    iDeviceHFSRAID_ML_o,
+    iDeviceHFSRAID_Mountain,
+    iDeviceHFSRAID_Mountain_o,
     iDeviceHFSRAID_Lion,
     iDeviceHFSRAID_Lion_o,
     iDeviceHFSRAID_SL,
@@ -118,10 +118,10 @@ image_t images[] = {
     {.name = "device_generic_o",            .image = NULL},
     {.name = "device_hfsplus",              .image = NULL},
     {.name = "device_hfsplus_o",            .image = NULL},
+    {.name = "device_hfsplus_mountain",     .image = NULL},
+    {.name = "device_hfsplus_mountain_o",   .image = NULL},
     {.name = "device_hfsplus_lion",         .image = NULL},
     {.name = "device_hfsplus_lion_o",       .image = NULL},
-    {.name = "device_hfsplus_ml",           .image = NULL},
-    {.name = "device_hfsplus_ml_o",         .image = NULL},
     {.name = "device_hfsplus_sl",           .image = NULL},
     {.name = "device_hfsplus_sl_o",         .image = NULL},
     {.name = "device_hfsplus_leo",          .image = NULL},
@@ -131,10 +131,10 @@ image_t images[] = {
 
     {.name = "device_hfsraid",              .image = NULL},
     {.name = "device_hfsraid_o",            .image = NULL},
+    {.name = "device_hfsraid_mountain",     .image = NULL},
+    {.name = "device_hfsraid_mountain_o",   .image = NULL},
     {.name = "device_hfsraid_lion",         .image = NULL},
     {.name = "device_hfsraid_lion_o",       .image = NULL},
-    {.name = "device_hfsraid_ml",           .image = NULL},
-    {.name = "device_hfsraid_ml_o",         .image = NULL},
     {.name = "device_hfsraid_sl",           .image = NULL},
     {.name = "device_hfsraid_sl_o",         .image = NULL},
     {.name = "device_hfsraid_leo",          .image = NULL},
@@ -372,10 +372,10 @@ static int loadGraphics(void)
 	LOADPNG(device_generic_o,               iDeviceGeneric);
 	LOADPNG(device_hfsplus,                 iDeviceGeneric);
 	LOADPNG(device_hfsplus_o,               iDeviceHFS);
+	LOADPNG(device_hfsplus_mountain,        iDeviceHFS_Mountain);
+	LOADPNG(device_hfsplus_mountain_o,      iDeviceHFS_Mountain_o);
 	LOADPNG(device_hfsplus_lion,            iDeviceHFS_Lion);
 	LOADPNG(device_hfsplus_lion_o,          iDeviceHFS_Lion_o);
-	LOADPNG(device_hfsplus_ml,              iDeviceHFS_ML);
-	LOADPNG(device_hfsplus_ml_o,            iDeviceHFS_ML_o);
 	LOADPNG(device_hfsplus_sl,              iDeviceHFS_SL);
 	LOADPNG(device_hfsplus_sl_o,            iDeviceHFS_SL_o);
 	LOADPNG(device_hfsplus_leo,             iDeviceHFS_Leo);
@@ -385,10 +385,10 @@ static int loadGraphics(void)
 
 	LOADPNG(device_hfsraid,                 iDeviceGeneric);
 	LOADPNG(device_hfsraid_o,               iDeviceHFSRAID);
+	LOADPNG(device_hfsraid_mountain,        iDeviceHFSRAID_Mountain);
+	LOADPNG(device_hfsraid_mountain_o,      iDeviceHFSRAID_Mountain_o);
 	LOADPNG(device_hfsraid_lion,            iDeviceHFSRAID_Lion);
 	LOADPNG(device_hfsraid_lion_o,          iDeviceHFSRAID_Lion_o);
-	LOADPNG(device_hfsraid_ml,              iDeviceHFSRAID_ML);
-	LOADPNG(device_hfsraid_ml_o,            iDeviceHFSRAID_ML_o);
 	LOADPNG(device_hfsraid_sl,              iDeviceHFSRAID_SL);
 	LOADPNG(device_hfsraid_sl_o,            iDeviceHFSRAID_SL_o);
 	LOADPNG(device_hfsraid_leo,             iDeviceHFSRAID_Leo);
@@ -906,7 +906,7 @@ void drawDeviceIcon(BVRef device, pixmap_t *buffer, position_t p, bool isSelecte
                     
 					switch (device->OSVersion[3]) {
 						case '8':
-							devicetype = is_image_loaded(iDeviceHFSRAID_ML) ? iDeviceHFSRAID_ML : is_image_loaded(iDeviceHFSRAID) ? iDeviceHFSRAID  : iDeviceGeneric;
+							devicetype = is_image_loaded(iDeviceHFSRAID_Mountain) ? iDeviceHFSRAID_Mountain : is_image_loaded(iDeviceHFSRAID) ? iDeviceHFSRAID  : iDeviceGeneric;
 							break;
 						case '7':
 							devicetype = is_image_loaded(iDeviceHFSRAID_Lion) ? iDeviceHFSRAID_Lion : is_image_loaded(iDeviceHFSRAID) ? iDeviceHFSRAID  : iDeviceGeneric;
@@ -931,7 +931,7 @@ void drawDeviceIcon(BVRef device, pixmap_t *buffer, position_t p, bool isSelecte
 					
 					switch (device->OSVersion[3]) {
 						case '8':
-							devicetype = is_image_loaded(iDeviceHFS_ML) ? iDeviceHFS_ML : is_image_loaded(iDeviceHFS) ? iDeviceHFS : iDeviceGeneric;
+							devicetype = is_image_loaded(iDeviceHFS_Mountain) ? iDeviceHFS_Mountain : is_image_loaded(iDeviceHFS) ? iDeviceHFS : iDeviceGeneric;
 							break;
 						case '7':
 							devicetype = is_image_loaded(iDeviceHFS_Lion) ? iDeviceHFS_Lion : is_image_loaded(iDeviceHFS) ? iDeviceHFS : iDeviceGeneric;
